# qbot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  QUERY_LANGUAGE.md  README.md  docker-compose.yml
.github/workflows/: build.yml  ci.yml
aws/: README.md
aws/cloudformation/: infrastructure.yml  service.yml
aws/ecs/: qbot-task-definition.json
aws/scripts/: cleanup.sh  deploy.sh  validate.sh
deploy/: deploy-with-ollama.sh  deploy.sh  setup.sh
ollama/: Dockerfile  entrypoint.sh
src/: buzzing_test.rs  check.rs  integration_tests.rs  judge_tests.rs  lib.rs  main.rs  mock_tests.rs  qb.rs  qb_tests.rs  query.rs  query_tests.rs  read.rs  utils.rs  utils_tests.rs
templates/: prompt.jinja  prompt_no_prompt.jinja
templates/latest/: prompt.jinja  prompt_no_prompt.jinja
templates/v1/: prompt.jinja
