[package]
name = "qbot"
version = "0.1.0"
edition = "2024"

[dependencies]
phf = { version = "0.12.1", features = ["macros"] }
poise = "0.6.1"
rapidfuzz = "0.5.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serenity = "0.12.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
